# AnyasFriend

./: .gitignore  LICENSE  README.md  dockerfile  example_config.yaml  install_env.bat  main.py  pyproject.toml  requirements.txt  start.bat
.github/workflows/: build-docker-image.yml  ci.yml
anyasfriend/: chatbot.py  config.py  factory.py  multi_chatbot.py  schema.py  utils.py
anyasfriend/components/asr/: __init__.py  fun_asr.py
anyasfriend/components/interfaces/: __init__.py  asr.py  core.py  knowledge_base.py  llm.py  memory.py  spk.py  tts.py
anyasfriend/components/llm/: __init__.py  deepseek_llm.py  func_call.py  ollama_llm.py  openai_llm.py
anyasfriend/components/media/: __init__.py  playback.py
anyasfriend/components/memory/: __init__.py  in_memory.py
anyasfriend/components/spk/: __init__.py  campplus.py
anyasfriend/components/spk/speakerlab/: __init__.py  builder.py  config.py  infer_diarization.py
anyasfriend/components/spk/speakerlab/models/campplus/: DTDNN.py
anyasfriend/components/spk/speakerlab/process/: augmentation.py  cluster.py  processor.py  processor_para.py
anyasfriend/components/spk/speakerlab/utils/: fileio.py  utils.py
anyasfriend/components/tts/: __init__.py  edge_tts_impl.py  fish_tts.py
anyasfriend/components/vad/: __init__.py  silero.py
